# clavus

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  CONTRIBUTING.md  DESIGN-stem-sync.md  LICENSE  README.md  SETUP_STEVEN.md  TESTING.md  check_uvicorn.py  debug_pull.py  debug_pull2.py  debug_server_start.py  diag_als_integrity.ps1  fix_cli_pull.py  fix_cli_push.py  fix_push2.py  fix_solo_push.py  fix_tui_pull.py  index.html  install.ps1  install.sh  pyproject.toml  test_cli.py  test_cli_full.py  test_cues.py  test_parser.py  test_real_als.py  test_snapshot.py  test_watch.py
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-01_101700-clavus-phase2.md  2026-05-02_000000-clavus-tui-sync.md  2026-05-03_release-plan.md
clavus/: __main__.py  cli.py  config.py  cues.py  discovery.py  git_integration.py  helpers.py  p2p_transport.py  parser.py  progress.py  store.py  sync.py  tui.py  visual_diff.py  watch.py  web.py  web.py.bak
clavus/relay/: clavus-relay.service.template  launchd.plist.template
clavus/web/: app.css  app.js  index.html
docs/: ARCHITECTURE.md  beta-checklist.md  collaborator-quickstart.md  debug-report-2026-05-16.md  index.html
docs/bugs/: pull-all-error-display.md
docs/plans/: ux-cleanup-two-collab.md
docs/postmortems/: steven-collab-2026-05-11.md
fixtures/: test_project.als
hotkeys/: README.md  _test_config.lua  autohotkey.ahk  bindings.json  debug_kit.lua  hammerspoon.lua
m4l-device/: README.md  clavus-api.js  clavus.maxpat
scripts/: install-relay.sh
tests/: test_sync_import.py
